[gd_scene load_steps=14 format=2]

[ext_resource path="res://Boss/RigidBody2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprite/boss.png" type="Texture" id=2]
[ext_resource path="res://UI/Fonts/bebas_neue/BebasNeue-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Audio/Growllllllllll.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 336.625, 10 )

[sub_resource type="DynamicFont" id=2]
size = 300
font_data = ExtResource( 3 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 144.66
height = 241.023

[sub_resource type="Animation" id=4]
resource_name = "Boss"

[sub_resource type="Animation" id=5]
resource_name = "Death"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 4, 5, 6, 7, 6, 5, 6, 7, 8, 7, 8, 9 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 2 ]
}

[sub_resource type="Animation" id=7]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 159.348
height = 245.596

[sub_resource type="DynamicFont" id=9]
size = 80
font_data = ExtResource( 3 )

[node name="Boss" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionBody2D" type="CollisionPolygon2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -71.3955, 402.569 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -24.1999, 135.062 )
scale = Vector2( 1.48163, 1.48163 )
texture = ExtResource( 2 )
hframes = 5
vframes = 2

[node name="Label" type="Label" parent="."]
margin_left = -83.9912
margin_top = 123.43
margin_right = 156.009
margin_bottom = 483.43
rect_min_size = Vector2( 0.5, 0.5 )
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 2 )
text = "81"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -31.7837, 108.065 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Boss = SubResource( 4 )
anims/Death = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Laser = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -33.2979, 107.029 )
shape = SubResource( 8 )

[node name="Health" type="Label" parent="."]
margin_left = -253.0
margin_top = -207.527
margin_right = 209.0
margin_bottom = -111.527
custom_fonts/font = SubResource( 9 )
text = "51"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Growl" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
